genmake/header内typedef冲突.txt



FAILED: _build/bumblebee/rootfs/libsipcc/sipstack/synbase/sipcc/plat/sl/ccmetrics.c.o 
${GCCPREFIX}/home/lajiang/.genmake/artifactory/toolchain/arm_gcc-8.3.0_glibc-2.28-x86_64-linux-gnueabihf/bin/arm-cisco-linux-gnueabihf-gcc -D_GNU_SOURCE -isystem platform/compiler/glibc -D_GCC8_ ${GCCOTHERSWITCHES} ${GCCCOLORSWITCHES} -Wall -Wextra -Wno-unknown-pragmas -Wno-discarded-qualifiers -Wno-sign-compare -Wno-missing-field-initializers -Wno-unused-result -Wno-unused-variable -Wno-unused-function -Wno-unused-but-set-variable -Wno-incompatible-pointer-types -Wno-implicit-function-declaration -Wno-unused-parameter -Wno-pointer-sign -Wno-format-truncation -Wno-return-type -Wno-array-bounds -Wno-missing-braces -Wno-misleading-indentation -Wno-stringop-overflow -Wno-implicit-fallthrough -Wno-sizeof-pointer-memaccess -Wno-parentheses -Wno-pointer-compare -Wno-cast-function-type -Wno-memset-elt-size -Wno-unused-value -Wno-int-conversion -Wno-format -Wno-bool-compare -Wno-enum-compare -Wno-type-limits -Werror -Wno-unused-parameter -Wno-maybe-uninitialized -Wwrite-strings -Wno-psabi -O2 -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -isystem platform/compiler/glibc -D_GCC8_ -funwind-tables -rdynamic -fno-omit-frame-pointer -mabi=aapcs-linux -mapcs -B /home/lajiang/.genmake/artifactory/toolchain/arm_gcc-8.3.0_glibc-2.28-x86_64-linux-gnueabihf/bin/arm-cisco-linux-gnueabihf- --sysroot=/home/lajiang/.genmake/artifactory/toolchain/arm_gcc-8.3.0_glibc-2.28-x86_64-linux-gnueabihf/arm-cisco-linux-gnueabihf/sysroot -fno-common -fexceptions -fstack-protector-all -pthread -fPIC -fPIC -D_BUMBLEBEE_ -D_DSPGDVF2300_ -DTAM_SUPPORT -DNON_ANDROID -DDBUS_HAS_RECURSIVE_MUTEX -DGLIBC_VERSION_GT_2_19 -DUSE_CISCOSSL_7 -DFEATURE_IPV6 -DFEATURE_CE -DFEATURE_WLAN -DFEATURE_WLAN_IPV6 -DFEATURE_ASLR -DFEATURE_ICE -DFEATURE_BT -DFEATURE_USB -DFEATURE_HOTSPOT -DFEATURE_EEE -DFEATURE_DP_FAST -DFEATURE_VENDOR_CH -DFEATURE_VIDEO -DFEATURE_WIFI_DIAG -DFEATURE_WIFI_LTWT -DCPR_API_LINUX -D__ICE__ -DFT_SHARED_LINE_CALL_LOG -DSDP_CPR -DSIP_FIXME -D__HL_API__ -D__LIBXML2__ -D__EDGE__ -D__EDGE_PROTO_SYNERGYLITE__ -D_SYNERGYLITE_ -D__STDC_LIMIT_MACROS -iquote sipstack/synbase/sipcc -iquote sipstack/synbase/sipcc/core/sipstack/h -iquote sipstack/synbase/sipcc/core/gsm/h -iquote sipstack/synbase/sipcc/core/sdp -iquote sipstack/synbase/sipcc/core/api -iquote sipstack/synbase/sipcc/core/ccapp -iquote sipstack/synbase/sipcc/core/utils -iquote sipstack/synbase/sipcc/core/ccapi -iquote sipstack/synbase/sipcc/core/ccapi/config -iquote sipstack/synbase/sipcc/plat/sl -iquote sipstack/synbase/sipcc/plat/common -iquote sipstack/synbase/sipcc/nattools/icemgr/api -iquote infra/lib/nattools/sockaddrutil/include -iquote infra/lib/nattools/icelib/include -iquote infra/lib/nattools/icelib/src -iquote _build/bumblebee/rootfs/libedge/infra/services/edge_gateway/api -iquote sipstack/synbase/cpr/linux -iquote infra/lib/cuva/include -iquote infra/apps/bluetooth/btapi/api -iquote _build/git-worktrees/git@sqbu-github.cisco.com/SL/security.git/89f58131c5c75bd8d38aea18b7aa3360361ca801/secureApi/include -iquote sipstack/synbase/sipcc -isystem sipstack/synbase/sipcc/include -isystem sipstack/synbase/sipcc/core/ccapp/config -isystem sipstack/synbase/sipcc/core/common -isystem sipstack/synbase/sipcc/core/includes -isystem infra/include/lib -isystem infra/lib/nattools/stunlib/include -isystem infra/services/edge_gateway/include -isystem infra/services/edge_gateway/src/include -isystem infra/services/media/include -isystem infra/services/media/client/include -isystem infra/services/media/client/lib/ms -isystem infra/lib/cisco/api -isystem infra/include/apps/api -isystem native/include -isystem sipstack/synbase/cpr/include -isystem infra/lib/bumblebee/api/upgapi/api -isystem infra/lib/propertystore/api -isystem infra/lib/bumblebee/api/platform/api -isystem infra/lib/dnslookup/include -isystem _build/git-worktrees/git@sqbu-github.cisco.com/SL/security.git/89f58131c5c75bd8d38aea18b7aa3360361ca801/build/linux/include/app/include -isystem java/cisco/CIP_Common/CIP_native/classes_SIP/Generated_Source -isystem infra/include/kernel/api -isystem /home/lajiang/.genmake/artifactory/releases/bumblebee/os/20220608-aae623ef1ff/include -isystem /home/lajiang/.genmake/artifactory/releases/bumblebee/os/20220608-aae623ef1ff/include -iquote include -MD -MF _build/bumblebee/rootfs/libsipcc/sipstack/synbase/sipcc/plat/sl/ccmetrics.c.o.d -MT 

_build/bumblebee/rootfs/libsipcc/sipstack/synbase/sipcc/plat/sl/ccmetrics.c.o -c -o _build/bumblebee/rootfs/libsipcc/sipstack/synbase/sipcc/plat/sl/ccmetrics.c.o sipstack/synbase/sipcc/plat/sl/ccmetrics.c
In file included from sipstack/synbase/sipcc/include/vcm.h:43,											====》#include "ccsdp.h"
                 from sipstack/synbase/sipcc/core/includes/phone_types.h:15,
                 from sipstack/synbase/sipcc/core/includes/configmgr.h:34,
                 from sipstack/synbase/sipcc/include/ccmetrics.h:24,
                 from sipstack/synbase/sipcc/plat/sl/ccmetrics.c:24:
sipstack/synbase/sipcc/include/ccsdp.h:537:3: error: conflicting types for 'sdp_srtp_fec_order_t'
 } sdp_srtp_fec_order_t;
   ^~~~~~~~~~~~~~~~~~~~
   
In file included from infra/services/media/client/include/ms_sessioncontrol.h:27,		====》#include "ms_mari.h"
                 from infra/services/media/client/include/ms_api.h:21,
                 from sipstack/synbase/sipcc/plat/sl/ccmetrics.c:20:
infra/services/media/client/include/ms_mari.h:43:3: note: previous declaration of 'sdp_srtp_fec_order_t' was here
 } sdp_srtp_fec_order_t;
   ^~~~~~~~~~~~~~~~~~~~
[ 15%] [/bumblebee/rootfs/libsipcc] CC sipstack/synbase/sipcc/core/sipstack/ccsip_dialogmgr.c
ninja: build stopped: subcommand failed.


